# django-rclone

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: commands.md  configuration.md  connectors.md  getting-started.md  index.md  migration-from-dbbackup.md  providers.md  signals.md  testing.md
src/django_rclone/: apps.py  exceptions.py  filenames.py  process_utils.py  rclone.py  settings.py  signals.py
src/django_rclone/db/: base.py  mongodb.py  mysql.py  postgresql.py  registry.py  sqlite.py
src/django_rclone/management/commands/: dbbackup.py  dbrestore.py  listbackups.py  mediabackup.py  mediarestore.py
tests/: settings.py  test_commands.py  test_db.py  test_exceptions.py  test_filenames.py  test_process_utils.py  test_rclone.py  test_settings.py  test_signals.py  test_subprocess_guardrails.py
tests/commands/: test_dbbackup.py  test_dbrestore.py  test_listbackups.py  test_mediabackup.py  test_mediarestore.py
tests/integration/: conftest.py  test_dbbackup_clean.py  test_dbbackup_restore.py  test_listbackups.py  test_media_roundtrip.py  test_signals.py
tests/test_connectors/: test_base.py  test_mongodb.py  test_mysql.py  test_postgresql.py  test_sqlite.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
