[project]
name = "django-rclone"
version = "0.1.0"
description = "rclone wrapper for Django database and media file backups"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["django>=4.2"]

[project.urls]
Repository = "https://github.com/j/django-rclone"

[dependency-groups]
dev = ["pre-commit", "ruff", "ty", "pytest", "pytest-django"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_rclone"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["django-dbbackup"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["django-dbbackup"]
