[project]
name = "django-rclone"
version = "0.2.0"
description = "rclone wrapper for Django database and media file backups"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["django>=5.2"]

[project.urls]
Documentation = "https://django-rclone.readthedocs.io/"
Repository = "https://github.com/kjnez/django-rclone"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "ty",
    "pytest",
    "pytest-django",
    "coverage[toml]",
    "pytest-cov",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_rclone"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["django-dbbackup"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["django_rclone"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["django-dbbackup"]
